--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@ body {
     text-transform: uppercase;
     cursor: pointer;
     transition: background-color var(--transition-speed);
+    box-shadow: 0 2px 4px var(--shadow-color);
 }
 
 .button:hover {
@@ -103,7 +104,7 @@ p {
 .video-container {
     position: relative;
     width: 82%;
-    padding-bottom: 45%;
+    padding-bottom: 46%;
     margin: 0 auto;
 }
 
