--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@
     --text-color: #FFFFFF;
     --text-secondary: #a7a7a7;
     --shadow-color: rgba(0, 0, 0, 0.8);
-    --doc-height: 100%;
     --border-radius: 0.375rem;
     --transition-speed: 0.3s;
 }
@@ -136,7 +135,8 @@ main {
     z-index: 1;
     max-width: 800px;
     padding: 2rem;
-    background-color: rgba(13, 17, 23, 0.7); /* Semi-transparent background */
+    background-color: rgba(13, 17, 23, 0.7);
+    /* Semi-transparent background */
     border-radius: var(--border-radius);
 }
 
@@ -224,7 +224,8 @@ main {
     margin: 0 0.5rem;
 }
 
-.button:hover, .button.active {
+.button:hover,
+.button.active {
     background-color: var(--accent-color);
     color: var(--primary-color);
 }
@@ -335,6 +336,75 @@ footer {
     color: var(--accent-color);
 }
 
+.portfolio-content {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 2rem;
+}
+
+.portfolio-item {
+    background-color: var(--secondary-color);
+    border-radius: var(--border-radius);
+    padding: 2rem;
+    box-shadow: 0 4px 6px var(--shadow-color);
+    transition: transform var(--transition-speed);
+}
+
+#mlPortfolio,
+#devopsPortfolio {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 2rem;
+}
+
+
+.portfolio-item:hover {
+    transform: translateY(-5px);
+}
+
+.portfolio-item h3 {
+    color: var(--accent-color);
+    margin-bottom: 1rem;
+}
+
+.portfolio-item p {
+    margin-bottom: 1rem;
+}
+
+.portfolio-item .tech-stack {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+    margin-bottom: 1rem;
+}
+
+.portfolio-item .tech-stack img {
+    height: 20px;
+}
+
+.portfolio-item .section-image {
+    width: 100%;
+    height: auto;
+    border-radius: var(--border-radius);
+    margin-bottom: 1rem;
+}
+
+.portfolio-item .video-container {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%;
+    margin-bottom: 1rem;
+}
+
+.portfolio-item .video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: var(--border-radius);
+}
+
 @media (max-width: 768px) {
     #hero {
         flex-direction: column-reverse;
@@ -392,4 +462,14 @@ footer {
     .skills-grid {
         grid-template-columns: 1fr;
     }
+
+    .portfolio-content {
+        grid-template-columns: 1fr;
+    }
+
+    #mlPortfolio,
+    #devopsPortfolio {
+        grid-template-columns: 1fr;
+    }
+
 }
