--- a/styles.css
+++ b/styles.css
@@ -235,6 +235,7 @@ main {
 .portfolio-item {
     background-color: var(--secondary-color);
     border-radius: var(--border-radius);
+    font-size: 0.9rem;
     padding: 2rem;
     box-shadow: 0 4px 6px var(--shadow-color);
     transition: transform var(--transition-speed);
@@ -265,18 +266,29 @@ main {
     height: 20px;
 }
 
+a {
+    color: #F49D13;
+    text-decoration: none;
+    transition: color var(--transition-speed);
+}
+
+a:hover {
+    color: var(--accent-color);
+}
+
 .section-image {
-    max-width: 100%;
+    max-width: 82%;
     height: auto;
     border-radius: var(--border-radius);
-    margin: 1rem 0;
+    margin: 1rem auto;
+    display: block;
 }
 
 .video-container {
     position: relative;
-    width: 100%;
-    padding-bottom: 56.25%;
-    margin: 1rem 0;
+    width: 82%;
+    padding-bottom: 46%;
+    margin: 0 auto;
 }
 
 .video-container iframe {
@@ -357,5 +369,19 @@ main {
 
     .skills-grid, .portfolio-content {
         grid-template-columns: 1fr;
+        font-size: 0.7rem;
+    }
+
+    .portfolio-item {
+        padding: 0.9rem;
+        margin-bottom: 0.5rem;
+    }
+
+    .section-image {
+        max-width: 100%;
+    }
+
+    .video-container {
+        width: 100%;
     }
 }
